# MCP-Build-Rich-Context-AI-Apps-with-Groq

./: hello.py  pyproject.toml  readme.md  requirements.txt
L3/: L3.ipynb
L4/: L4.ipynb
L5/: L5.ipynb
L6/mcp_project/: mcp_chatbot.py
L6/mcp_project/papers/ai_agents/: papers_info.json
L6/mcp_project/papers/ai’s_energy_conundrum/: papers_info.json
L7/: L7.ipynb
L7/mcp_project/: mcp_chatbot.py  pyproject.toml
L7/mcp_project/papers/dspy_agentic_applications/: papers_info.json
L7/mcp_project/papers/math/: papers_info.json
L9/mcp_project/: pyproject.toml
mcp_project/: mcp_chatbot.py  research_server.py
mcp_project/papers/chemistry/: papers_info.json
mcp_project/papers/physics/: papers_info.json
papers/algebra/: papers_info.json
papers/economics/: papers_info.json
